--- a/style.css
+++ b/style.css
@@ -791,7 +791,7 @@ form div {
 #btnVolver {
   position: fixed;
   bottom: 20px;
-  right: 20px;
+  left: 20px;
   width: 70px;
   height: 70px;
   border-radius: 50%;
