--- a/style.css
+++ b/style.css
@@ -26,14 +26,15 @@ html, body {
 }
 
 .headerPrincipal .logo img {
-    width: 50px;
-    height: 50px;
+    width: 150px;
+    height: 80px;
 }
 
 .navPrincipal ul {
     display: flex;
     list-style: none;
     gap: 15px;
+    margin-left: -200px;
 }
 
 .navPrincipal ul li a {
@@ -103,7 +104,7 @@ html, body {
 }
 
 .bancos img {
-    width: 80px;
+    width: 150px;
     margin: 5px;
 }
 
